<resources>
    <string name="app_name">Simple Parking</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_targa">Targa</string>
    <string name="prompt_ip">IP Raspberry</string>
    <string name="action_sign_in">Registrati</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="primo_piano">PRIMO PIANO</string>
    <string name="secondo_piano">SECONDO PIANO</string>
    <string name="primo_posto">1</string>
    <string name="secondo_posto">2</string>
    <string name="terzo_posto">3</string>
    <string name="quarto_posto">4</string>
    <string name="quinto_posto">5</string>
    <string name="sesto_posto">6</string>
    <string name="progress_dialog">Progress Dialog Sincronizzazione</string>
    <string name="sync_in_corso">Sincronizzazione in corso&#8230;</string>
    <string name="gruppo_sviluppo">Powered by IT Group</string>
    <string name="reset_targa">Reset Targa</string>
    <string name="info_prenotazione">INFO PRENOTAZIONE</string>
    <string name="cod_prenotazione">Codice Prenotazione</string>
    <string name="posto_prenotato">Posto:\u0020</string>
    <string name="piano_prenotato">Piano:\u0020</string>
    <string name="chiudi_prenotazione">Chiudi prenotazione</string>


    <string name="SET">SET</string>
    <string name="TARGA">TARGA</string>
    <string name="CODICE_PRENOTAZIONE">CODICE</string>
    <string name="POSTO_PRENOTATO">POSTO</string>
    <string name="PIANO_PRENOTATO">PIANO</string>
    <string name="IP">IP</string>

</resources>
